tests/output/ill-typed/unexpected-lambda/unexpected-lambda-1.stella
ERROR_UNEXPECTED_LAMBDA
